resolved layout issue, and mobile bug.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-	background-color: #fff;
+	background-color: #000;
 	padding:10px;
+	color: #fff;
 }
 
 /*navigation*/
@@ -20,11 +21,11 @@ body {
 
 ul.nav {
 	max-width:1076px;
-	width:95.4%;
+	left: 4.5%;
+	width:92%;
 	height:30px;
+	margin: 0 auto;
 	list-style:none;
-	overflow:hidden;
-	margin: 0;
 	padding: 7px;
 	background-color:#000;
 
@@ -84,7 +85,8 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 #logo {
 	background-color:#000;
 	height:75px;
-	max-width:1084px;
+	max-width:1088px;
+	margin: 0 auto;
 	width: 99.8%;
 	border:solid #fff 3px;
 	color:#fff;
@@ -92,11 +94,12 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 
 #container {
 	max-width:1076px;
+	margin: 0 auto;
 	width:91.9%;
 	/*max-height:1960px;
 	height:300%;*/
 	max-height:1700px;
-	padding-bottom: 60%;
+	padding-bottom: 63%;
 	/*background-image: url(../images/blueframe.jpg);*/
 	background-color:#92DFFF;
 	border:7px solid black;
@@ -147,7 +150,7 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 	background-color:black;
 	border: 3px solid #fff;
 	position: absolute;
-	top:87.1%;
+	top:87.2%;
 	opacity:0;
 }
 
@@ -272,8 +275,9 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 	padding-bottom: 17.2%;
 	width:100.3%;
 	background-color:#fff;
-	position: absolute;
-	top:167%;
+	position: relative;
+	margin-top:56%;
+	/*top:167%;*/
 	/*left:3%;*/
 	border: 2px solid #000;
 }
@@ -306,10 +310,10 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		opacity:1;
 }*/
 
-/*#page2 {
-		height:960px;
+#page2 {
+		height:20px;
 		width:1000px;
-		background-image:url('');
+		/*background-image:url('');
 		background-repeat:no-repeat;
 		background-position: 0 0px;
 		position:absolute;
@@ -318,11 +322,11 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		transform-style: preserve-3d;
 		perspective:100;
 		background-color:blue;
-		opacity:.4;
-}*/
+		opacity:.4;*/
+}
 @media (max-width:1210px) {
 	#container {
-		padding-bottom: 62%;
+		padding-bottom: 66%;
 	}
 	#page3initial {
 		padding-bottom: 38.5%
@@ -330,17 +334,23 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 
 }
 @media (max-width:1172px) {
+	#container {
+		padding-bottom: 68%;
+	}
 	#page3initial {
 		padding-bottom: 38.95%
 	}
 	#textboxtwo {
 		width:101%;
-		top:;
+		/*top:;*/
 	}
 }
 @media (max-width:1155px) {
+	#container {
+		padding-bottom: 72%;
+	}
 	#textboxtwo {
-		top: 166%;
+		/*top: 166%;*/
 	}
 	#page3initial {
 		padding-bottom: 39.95%
@@ -348,10 +358,16 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 }
 @media (max-width:1185px) {
 	#textboxtwo {
-		top: 164%;
+		/*top: 164%;*/
+	}
+	#page3 {
+		padding-bottom: 79%;
 	}
 }	
 @media (max-width:1069px) {
+	#container {
+		padding-bottom: 74%;
+	}
 	#content {
 		margin-left: 3%;
 	}
@@ -359,12 +375,24 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		width:105.5%;
 	}
 	#textboxtwo {
-		top: 158%;
+		/*top: 158%;*/
+		margin-top: 56%;
+		padding-bottom: 24.2%;
+	}
+	#page3 {
+		padding-bottom: 85%;
 	}
 }
 @media (max-width:954px) {
+	#container {
+		padding-bottom: 79%;
+	}
 	#textboxtwo {
-		top:153%;
+		/*top:153%;*/
+		margin-top: 58%;
+	}
+	#page3 {
+		padding-bottom: 89%;
 	}
 }
 @media (max-width:883px) {
@@ -381,8 +409,9 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		width:107.2%;
 	}
 	#textboxtwo {
-		padding-bottom: 34.2%;
-		top:154%;
+		padding-bottom: 24.2%;
+		margin-top: 60%;
+		/*top:154%;*/
 	}
 }
 @media (max-width:845px) {
@@ -392,10 +421,12 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 	#container {
 		padding-bottom: 88%;
 	}
-	#textboxtwo {
-		padding-bottom: 34.2%;
+	#textboxtwo {/*
+		padding-bottom: 34.2%;*/
 		left:1%;
-		top:151%;
+		margin-top: 60%;
+		padding-bottom: 30.2%;
+		/*top:151%;*/
 	}
 }
 
@@ -411,8 +442,11 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		height:80%;
 	}
 	#textboxtwo {
+		margin-top: 64%;
+
+	/*
 		left:1.2%;
-		top: 148%;
+		top: 148%;*/
 	}
 	#frame {
 		height: 97%;
@@ -427,21 +461,23 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 @media (max-width: 767px) {
 	#textboxtwo {
 		left:1.2%;
-		top: 145%;
+		/*top: 145%;*/
 	}
 }
-@media (max-width: 675px) {
+/*@media (max-width: 675px) {
 	#textboxtwo {
 		left:1.2%;
 		top: 141%;
-		padding-bottom: 30.2%;
-	}
+		padding-bottom: 26.2%;
+		margin-top: 65%
+	}*/
 }
 @media (max-device-width: 675px) {
 	#textboxtwo {
 		left:1.2%;
-		top: 195%;
-		padding-bottom: 30.2%;
+		/*top: 195%;*/
+		padding-bottom: 26.2%;
+		margin-top: 65%
 	}
 	#page3initial {
 		top:146%;
@@ -450,10 +486,10 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		display: none;
 	}
 	#textboxtwo {
-		top:215%;
+		/*top:215%;*/
 		width:107.8%;
-		left:0%;
-		padding-bottom: 36.2%;
+		left:0%;/*
+		padding-bottom: 36.2%;*/
 	}
 	#vid-box {
 		opacity: 1;
@@ -469,34 +505,43 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 @media (max-width: 575px) {
 	#textboxtwo {
 		left:1.2%;
-		top: 135%;
-		padding-bottom: 10.2%;
+		/*top: 135%;*/
+		padding-bottom: 25.2%;
+		margin-top: 55%;
 	}
 	#frame {
 		height: 73%;
 	}
 	#page1 {
 		max-height: 569px;
+		width: 106%;
 	}
 	#vid-box {
 		top: 81%;
-	}
+	}/*
+	#page3 {
+		border-left:21px solid #fff;
+		border-right:21px solid #fff;
+	}*/
 	#textbox {
-		top:98%;
+		top:106%;
+		width: 106%;
 	}
-	#textboxtwo {
+	/*#textboxtwo {
 		top:113%;
-	}
+	}*/
 	#page3initial {
-		top: 96.5%;
+		top: 104%;
 	}
 	#pagetwo-header {
-		top: 82.5%;
-		left: -.5%;
+		top: 105.2%;
+		width:110.5%;
+		left: -8.5%;
 		opacity: 1;
 	}
 	#page3 {
-		left: -2%;
+		left: 0%;
+		width:91.5%;
 	}
 }
 
@@ -504,7 +549,7 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 @media (max-device-width: 480px) and (orientation:portrait) {
 	#textboxtwo {
 		left:1.2%;
-		top: 135%;
+		/*top: 135%;*/
 		padding-bottom: 10.2%;
 	}
 	#frame {
@@ -522,7 +567,7 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 	}
 	#textboxtwo {
 		left:0;
-		top:93.5%;
+		/*top:93.5%;*/
 		width:107%;
 		padding-bottom: 50.2%;
 	}
@@ -539,13 +584,15 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 		padding-bottom: 135%;
 	}
 	#container {
-		padding-bottom: 43%;
+		padding-bottom: 115%;
 	}
 }
+
+
 @media (max-width: 480px) and (orientation: landscape) {
 	#textboxtwo {
 		left:1.2%;
-		top: 135%;
+		/*top: 135%;*/
 		padding-bottom: 10.2%;
 	}
 	#frame {
@@ -563,7 +610,7 @@ ul.nav li a.ipsum:hover, ul.nav li a.ipsum:focus {
 	}
 	#textboxtwo {
 		left:0;
-		top:93.5%;
+		/*top:93.5%;*/
 		width:107%;
 		padding-bottom: 50.2%;
 	}
